--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-# DO NOT include azure-functions-worker in this file
-# The Python Worker is managed by Azure Functions platform
-# Manually managing azure-functions-worker may cause unexpected issues
-
-azure-functions
+torch
+numpy
+scipy
+scikit-learn
+requests
+pandas
+matplotlib
