--- a/.github/workflows/main_gcn.yml
+++ b/.github/workflows/main_gcn.yml
@@ -67,4 +67,4 @@ jobs:
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_5F6257CBB066451C9496C935A4E7DFA1 }}
           scm-do-build-during-deployment: true
-          enable-oryx-build: true
+          enable-oryx-build: false
